[package]
name = "finance_api"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]
description = "A Finance library with API definitions."
readme = "README.md"
repository = "https://github.com/felipet/finance_api"
license = "MIT"
license-file = "LICENSE"
keywords = ["finance"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
